@@ -1,3 +1,8 @@
+Tue Feb 10 20:56:07 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/ancdata.c (anc_inspect_socket_creds): refactored to avoid
+	  a rb_str_cat2 call.
+
 Tue Feb 10 04:34:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (when): makes parentheses balanced.
